T3/src/t3/La.g4
grammar La;

@members {
    public static String grupo="<<587001, 489336>>";
    //PilhaDeTabelas pilhaDeTabelas = new PilhaDeTabelas();
   
}

programa: 'fase:' NUM_INT 'inicio' corpo 'fim';
corpo : comandos
        | ;

declaracoes_objetos: obj_magia | obj_bloco | atribuicao;
atribuicao: IDENT '=' tipo;
obj_magia: 'magia' IDENT;
obj_bloco: 'bloco' IDENT;

declaracoes_funcao: 'funcao' IDENT '()' '{\n' comandos '}';

declaracoes:  declaracoes_objetos
            | declaracoes_funcao;

comandos : (cmd comandos)?;
cmd     : 'andar' '()'
        | 'virar' '()'
        | 'perguntar' '(' expressao ')' resultado
        | repetir 
        | IDENT '()'
        | 'usar' '('IDENT')'
        | declaracoes;

repetir: 'repetir' '(' NUM_INT ')' '{\n' comandos '}';
tipo: tipo_bloco | tipo_magia;
tipo_bloco : 'grama' | 'lava' | 'parede' | 'inimigo' | 'proximo_bloco' ;
tipo_magia : IDENT | NUM_INT | NUM_REAL ;
expressao: 'frente' '==' tipo '?';
resultado: 'sim' '{\n' comandos '}' ;

COMENTARIO
    : '#' .*? '#' ->skip;

IDENT
    : ('a'..'z'|'A'..'Z'| '_')('a'..'z'|'A'..'Z'|'0'..'9'| '_')*;

NUM_INT
    : ('0'..'9')+ ;

NUM_REAL
    : ('0'..'9')+ '.'('0'..'9')+ ; 

ENTER : ( ' '| '\t'| '\r'| '\n') -> skip;

COMENTARIO_ERRADO :
    { ErrosSintaticos.comentario = true;}
     '#' ~[\n#]* '\n' 
    ;

SIMBOLO_NAO_INDENTIFICADO
    : . 
    ;
